--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/preboot/angularjs-webpack",
   "dependencies": {
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "angular-ui-router": "^1.0.3",
+    "bootstrap": "^3.3.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
