--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular": "^1.5.0",
     "angular-cookie": "^4.1.0",
     "bootstrap": "^3.3.7",
+    "es6-mixins": "^1.0.2",
     "ng-token-auth": "0.0.30",
     "ngstorage": "^0.3.11",
     "p2": "^0.7.1",
