--- a/package.json
+++ b/package.json
@@ -22,15 +22,21 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.4",
     "angular": "^1.5.0",
+    "angular-actioncable": "^1.3.0",
     "angular-cookie": "^4.1.0",
+    "angular-websocket": "^2.0.1",
     "bootstrap": "^3.3.7",
+    "bufferutil": "^3.0.3",
     "es6-mixins": "^1.0.2",
+    "fs": "0.0.1-security",
     "ng-token-auth": "0.0.30",
     "ngstorage": "^0.3.11",
     "p2": "^0.7.1",
     "phaser": "^2.6.2",
     "pixi": "^0.3.1",
-    "pixi.js": "^4.4.3"
+    "pixi.js": "^4.4.3",
+    "tls": "0.0.1",
+    "utf-8-validate": "^4.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
@@ -39,7 +45,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "copy-webpack-plugin": "4.0.1",
-    "css-loader": "0.26.1",
+    "css-loader": "0.27.0",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.7.1",
